Significant readme improvements
Summary:
1) removes period
2) adds 's'

Test Plan: Sat back, reflected for a moment on why details like these bug me.

Reviewers: clang, mmarucheck, gregschechte

Reviewed By: clang

CC: msdkexp@

Differential Revision: https://phabricator.fb.com/D515714

Task ID: 1011836

--- a/README
+++ b/README
@@ -5,7 +5,7 @@ This open-source library allows you to integrate Facebook into your iOS app.
 
 Except as otherwise noted, the Facebook SDK for iOS is licensed under the Apache License, Version 2.0 (http://www.apache.org/licenses/LICENSE-2.0.html).
 
-Learn more about about the provided samples, documentation, integrating the SDK into your app, accessing source code, and more at http://developers.facebook.com/ios.
+Learn more about about the provided samples, documentation, integrating the SDK into your app, accessing source code, and more at https://developers.facebook.com/ios
 
 NOTE: By default, the Facebook SDK for iOS is installed in ~/Documents/FacebookSDK 
 
