--- a/README
+++ b/README
@@ -29,4 +29,4 @@ DEVELOPER TERMS
 
 - You agree to comply with all applicable laws and regulations and also agree to our Terms <https://www.facebook.com/policies/>, including our Platform Policies <https://developers.facebook.com/policy/>.and Advertising Guidelines, as applicable <https://www.facebook.com/ad_guidelines.php>.
 
-By using the Facebook iOS SDK or clicking “Continue” below you agree to these terms.
+By using the Facebook iOS SDK you agree to these terms.
