Change wrong translation for DeviceLogin.LogInPrompt key since the string is misplaced on the LoginView

--- a/FacebookSDKStrings.bundle/Resources/fr.lproj/FacebookSDK.strings
+++ b/FacebookSDKStrings.bundle/Resources/fr.lproj/FacebookSDK.strings
@@ -1,5 +1,5 @@
 /* The format string for device login instructions */
-"DeviceLogin.LogInPrompt" = "Rendez-vous sur %@ sur votre smartphone ou votre ordinateur et entrez ce code :";
+"DeviceLogin.LogInPrompt" = "Rendez-vous sur %@ sur votre smartphone ou votre ordinateur et entrez votre code.";
 
 /* The 'or' string for smart login instructions */
 "DeviceLogin.SmartLogInOrLabel" = "-- OU --";
@@ -8,10 +8,10 @@
 "DeviceLogin.SmartLogInStep0" = "Confirmez votre code sur Facebook.";
 
 /* The string for smart login instructions */
-"DeviceLogin.SmartLogInStep1" = "\n1. Allez dans le Menu";
+"DeviceLogin.SmartLogInStep1" = "\n1. Allez dans le Menu ";
 
 /* The string for smart login instructions */
-"DeviceLogin.SmartLogInStep2" = "\n2. Sélectionnez Demandes d'appareils";
+"DeviceLogin.SmartLogInStep2" = "\n2. Sélectionnez Demandes d'appareils ";
 
 /* The string for smart login instructions */
 "DeviceLogin.SmartLogInStep3" = "\n3. Confirmez le code.";
