--- a/FacebookSDKStrings.bundle/Resources/pt.lproj/FacebookSDK.strings
+++ b/FacebookSDKStrings.bundle/Resources/pt.lproj/FacebookSDK.strings
@@ -44,6 +44,9 @@
 "LoginButton.LogIn" = "Entrar";
 
 /* The long label for the FBSDKLoginButton when the user is currently logged out */
+"LoginButton.LogInContinue" = "Continuar com o Facebook";
+
+/* The long label for the FBSDKLoginButton when the user is currently logged out */
 "LoginButton.LogInLong" = "Entrar com o Facebook";
 
 /* The label for the FBSDKLoginButton when the user is currently logged in */
